gitops/base/istio-routing/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: cloudhusller-gateway
  namespace: cloudhusller-dev
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 8080
        name: http
        protocol: HTTP
      hosts:
        - cloudhusller.com
        - www.cloudhusller.com
